--- a/index.html
+++ b/index.html
@@ -10,12 +10,59 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="main.css">
+        <link href=”slick/slick.css” rel=”stylesheet”>
+        <link href=”slick/slick-theme.css” rel=”stylesheet”>
+
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+       <header>
+           <div class="headerLimited">
+            <img src="images/logo">
+        <a href="tel:+1-800-555-1234">(800)555-1234</a>
+    </div><!--end headerLimited-->
+       </header>
+
+       <div class="navBar">
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">Cruises</a>
+            <a href="#">Agents</a>
+            <a href="#">Book</a>
+        </nav>
+
+       <form class="search">
+           <input type="text" placeholder="Search">
+           <button type="submit">Search</button>
+       </form>
+    </div><!--end navBar-->
+       <main>
+            <div class=”myslider”>
+                    <picture>
+                        <source srcset=”images/deck1200.jpg” media=”(min-width: 29.25rem)”>
+                        <img srcset=”images/deck350.jpg” alt=”cruise ship deck”>
+                    </picture>
+            </div><!—end slider
+                
+
+
+       </main>
         
-        <script src="" async defer></script>
+        <script src="main.js" async defer></script>
+        <script src=https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js></script>
+        <script src=”slick/slick.min.js”></script>
+        <script>
+            $(document).ready(function() {
+            $(‘.myslider’).slick({
+            autoplay:true,
+            dots:true,
+            arrows:false
+            cssEase: ‘ease-out’,
+            speed:2000,
+            autoplaySpeed: 10000
+            });
+        });
+        </script>
+
     </body>
 </html>
