--- a/index.html
+++ b/index.html
@@ -26,20 +26,27 @@
     </div><!--end headerLimited-->
        </header>
 
-    
+       <div class="navBar">
+        <nav class="clearfix">
+            <button id="hamburgerBtn"></button>
+                <ul id="primaryNav">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Cruises</a></li>
+                    <li class="parent"><a href="#">Agents</a></li>
+                        <ul>
+                            <li><a href="#">Something</a></li>
+                            <li><a href="#">Something</a></li>
+                        </ul>
+                    <li><a href="#">Book</a></li>
+                </ul>
+        </nav>
 
        <form class="search">
            <input type="text" placeholder="Search">
            <button type="submit">Search</button>
        </form>
 
-       <div class="navBar">
-        <nav>
-            <a href="#">Home</a>
-            <a href="#">Cruises</a>
-            <a href="#">Agents</a>
-            <a href="#">Book</a>
-        </nav>
+   
     </div><!--end navBar-->
        <main>
             <div class="myslider">
