added images for articles

--- a/index.html
+++ b/index.html
@@ -68,8 +68,27 @@
             </picture>
             </div><!--end myslider-->
                 
+<div class="sizeRestraint">     
 <h2>Recent Blog Articles</h2>
 
+<div class="articleOn">
+    <img src="images/iceCream200.jpg" alt="ice cream">
+    <span>Text Here</span>
+</div>
+<div class="articleOn">
+    <img src="images/foggyShip200.jpeg" alt="foggy ship">
+    <span>Text Here</span>
+</div>
+<div class="articleOn">
+    <img src="images/northernLights200.jpeg" alt="northern lights">
+    <span>Text Here</span>
+</div>
+<div class="articleOn">
+    <img src="images/sunsetPeople200.jpeg" alt="people watching the sunset">
+    <span>Text Here</span>
+</div>
+
+</div><!--sizeRestraint-->      
        </main>
 
        <footer>
