correction on folders made

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
        <div class="navBar">
         <nav class="clearfix">
             <button id="hamburgerBtn"></button>
-                <ul id="primaryNav">
-                    <li><a href="#">Home</a></li>
+                <ul id="primaryNav" class="closed">
+                    <li class="active"><a href="index.html">Home</a></li>
                     <li><a href="#">Cruises</a></li>
                     <li class="parent"><a href="#">Agents</a></li>
                         <ul>
@@ -42,7 +42,7 @@
         </nav>
 
        <form class="search">
-           <input type="text" placeholder="Search">
+           <input type="text" placeholder="Search...">
            <button type="submit">Search</button>
        </form>
 
