opacity on images

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     
 </div>
 <div class="articleOn">
-        <img src="images/sunsetPeople200.jpeg" alt="people watching the sunset">
+        <a href="#"><img src="images/sunsetPeople200.jpeg" alt="people watching the sunset"></a>
         <span class="top">Popular Destinations</span>
         <span class="bottom">August 9, 2018</span>
     
