footer address links and styling

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <img src="images/logo1x.png" alt="logo"
                     srcset="images/logo1x.png 1x, images/logo2x.png 2x, images/logo3x.png 3x">
             </figure>
-        <a class="number" href="tel:+1-800-555-1234">(800)555-1234</a>
+        <a class="number" href="tel:+1-800-555-1234">(800) 555-1234</a>
        </header>
 </div><!--end headerLimited-->       
 
@@ -35,8 +35,8 @@
                     <li><a href="#">Cruises</a></li>
                     <li class="parent"><a href="#">Agents</a>
                         <ul>
-                            <li><a href="#">Something</a></li>
-                            <li><a href="#">Something</a></li>
+                            <li><a href="#">Emmit Smith</a></li>
+                            <li><a href="#">Elizabeth Bennet</a></li>
                         </ul>
                     </li>
                     <li><a href="#">Book</a></li>
@@ -106,9 +106,14 @@
        <footer>
         <div class="footerWrapper">
            <div class="firstBlock">
-               <h3 class="address">Address:</h3>
+            <h3>Address:</h3>
+              <a href="https://goo.gl/maps/zqzCSM5eo4L2" target="_blank">  <p>Cabot Cruises </br>
+               23 South Main St. Suite 16</br>
+               Lexington, VA</p></a>
                <h3 class="phone">Phone:</h3>
-               <h3 class="hours">Hours of Operation:</h3>
+               <p><a class="number" href="tel:+1-800-555-1234">(800)555-1234</a></p>
+               <h3 class="hours">Hours of Operation: </h3>
+               <p>Mo-Fr 09:00-16:00</p>
              
             </div><!--end firstBlock-->
 
@@ -118,7 +123,7 @@
                 
                 <form action="#">
                     <div class="newsLetterForm">
-                        <input type="text" placeholder="Email address" name="mail" required class="emailAddress">
+                        <input type="text" placeholder="myaddress@gmail.com" name="mail" required class="emailAddress">
                         <input type="submit" value="Subscribe" class="submitButton">
                     </div><!--end newsLetterForm-->
                 </form>
