--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             </div><!--end socialMedia-->
     </div><!--end wrapperSocial-->
             <div class="copyRight">
-                <h5>&copy; 2019 Maurina Davis &bull; login</h5>
+                <h5>&copy; 2019 MaurinaDavis.com &bull; login</h5>
 
             </div><!--end copyRight-->
         
@@ -188,7 +188,7 @@
                 "image": "http://fullpath.com/logo1x.png",
                 "priceRange": "$500 to $4000"
                 }
-            ]
+            
         </script>
 
     </body>
