--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
             <div class="thirdBlock">
                     <h3>Why Cabot Cruises</h3>
-                    <p>Cabot Cruises is a travvel agency providing the best cruise deals on our online travel website.  We can help you with all inclusive vacations including discounted cruises.</p>
+                    <p>Cabot Cruises is a travel agency providing the best cruise deals on our online travel website.  We can help you with all inclusive vacations including discounted cruises.</p>
                     <p>We do not sell trael to residents of Delaware, Iowa, Florida, Hawaii, and Washington state because those states are just weird.  If you are a resident of one of these states, call your congressman and tell them to change the regulations.</p>
                 </div>
             </div><!--footerWrapper-->
