four html pages added

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
             <button id="hamburgerBtn"></button>
                 <ul id="primaryNav" class="closed">
                     <li class="active"><a href="index.html">Home</a></li>
-                    <li><a href="#">Cruises</a></li>
+                    <li><a href="cruise.html">Cruises</a></li>
                     <li class="parent"><a href="#">Agents</a>
                         <ul>
-                            <li><a href="#">Emmit Smith</a></li>
-                            <li><a href="#">Anne Bennet</a></li>
+                            <li><a href="emmit.html">Emmit Smith</a></li>
+                            <li><a href="anne.html">Anne Bennet</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">Book</a></li>
+                    <li><a href="booking.html">Book</a></li>
                 </ul>
         </nav>
 
