--- a/cruise.html
+++ b/cruise.html
@@ -9,9 +9,10 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
+ 
         <div class="box">
         <div class="left">
         <h1> Cruises</h1>
@@ -48,8 +49,9 @@
     <div class="right">
         <h2>Alaska from San Fansico</h2>
         <p>Feel the cool ocean breeze and bask in the sun on this relaxing cruise.  There is much to see and do while on the ship.  You can join in activities or just sit and relax.</p>
-    </div><!--right-->    
-    </div><!--box-->
+    </div><!--right--> 
+</div><!--box-->   
+
         <script src="" async defer></script>
     </body>
 </html>
