--- a/cruise.html
+++ b/cruise.html
@@ -13,15 +13,18 @@
     </head>
     <body>
  
+<div class="LimitSize">  
+    <h1> Cruises</h1>
         <div class="box">
         <div class="left">
-        <h1> Cruises</h1>
+    
         <img >
     </div><!--left-->
     
     <div class="right">
         <h2>Bahamaz from Miami $1499</h2>
         <p>Feel the cool ocean breeze and bask in the sun on this relaxing cruise.  There is much to see and do while on the ship.  You can join in activities or just sit and relax.</p>
+    <button class="readMore">Read More</button>
     </div><!--right-->
 
     <div class="left">    
@@ -51,7 +54,7 @@
         <p>Feel the cool ocean breeze and bask in the sun on this relaxing cruise.  There is much to see and do while on the ship.  You can join in activities or just sit and relax.</p>
     </div><!--right--> 
 </div><!--box-->   
-
+</div><!--LimitSize-->
         <script src="" async defer></script>
     </body>
 </html>
