agent pages built

--- a/anne.html
+++ b/anne.html
@@ -15,6 +15,13 @@
 
 <div class="LimitSize agents">  
         <h1>Agent - Anne Bennet</h1>
+        <div class="box">
+                <figure>
+                        <img src="images/anne.jpg" alt="Anne Bennet">
+                        <figcaption>Anne Bennet</figcaption>
+                </figure>
+            <div class="left">
+    
         <h4>Phone:</h4>
         <p>1-800-555-1234 ext. 12</p>
 
@@ -26,6 +33,11 @@
 
         <h4>Office Hours:</h4>
         <p>8:00am - 6:00pm</p>
+
+    </div><!--left-->
+
+  
+</div><!--box-->
         
         <h4> Biography:</h4>
         <p> I have loved to travel as long as I can remember.  At the age of 12 I asked if I could fly by myself to Hawaii and I never came back.<br>
