navigation bug fixed, javascript menu function added

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <a class="number" href="tel:+1-800-555-1234">(800) 555-1234</a>
        </header>
 </div><!--end headerLimited-->       
-<div class="navBackground">
-       <div class="navBar">
+
+    <div class="navBar">
         <nav class="clearfix">
             <button id="hamburgerBtn"></button>
                 <ul id="primaryNav" class="closed">
@@ -41,17 +41,16 @@
                     </li>
                     <li><a href="booking.html">Book</a></li>
                 </ul>
+        
+            <div class="searchBox">
+                <form action="/action_page.php" class="search">
+                    <input type="search" placeholder="Search..." name="search">
+                    <button type="submit"><i class="fa fa-search"></i></button>
+                </form>
+            </div><!--end searchBox-->
         </nav>
-
-    <div class="searchBox">
-       <form action="/action_page.php" class="search">
-           <input type="text" placeholder="Search..." name="search">
-           <button type="submit"><i class="fa fa-search"></i></button>
-       </form>
-    </div><!--end searchBox-->
-   
     </div><!--end navBar-->
-</div><!--navBackground-->
+
 <main>
             <div class="myslider">
               <picture>
